--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="firstview">
         <h1 class="firstview__title">毎日を笑顔に</h1>
         <div class="absolute__right-box">
-            <img src="img/firstview.jpeg" width="800" alt="">
+            <img class="img-right" src="img/firstview.jpeg" alt="">
         </div>
         <div class="relative__left-box"></div>
     </div>
